--- a/DTC.web/package.json
+++ b/DTC.web/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-router-provider": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
