--- a/DTC.DataAccess/DTC.DataAccess.csproj
+++ b/DTC.DataAccess/DTC.DataAccess.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -8,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <ProjectReference Include="..\DTC.Model\DTC.Model.csproj" />
   </ItemGroup>
 
 </Project>
